# Toxicity-OSS

./: .gitignore  CHANNEL_SELECTION_PROTOCOL.md  FILTERING_FINDINGS.md  Mestrado_ideia.md  PIPELINE_USAGE_AND_METHODOLOGY.md  README.md  community_smells.md  main.py  pipeline_api.py  pyproject.toml
apps/: thread_explorer.py
configs/: disentanglement_default.yaml
discord_disentanglement/: __init__.py  cli.py  embeddings.py  io.py  models.py  pipeline.py  reports.py  text.py
docs/methodology/: CHANNEL_SELECTION_PROTOCOL.md  DISENTANGLEMENT_DEVELOPMENT_PROCESS.md  DISENTANGLEMENT_V2_METHOD.md  FILTERING_FINDINGS.md  NEO4J_DISENTANGLEMENT_INTERFACE_METHODOLOGY.md  PIPELINE_USAGE_AND_METHODOLOGY.md
docs/research/: community_smells.md
docs/tasks/: discord_disentanglement_neo4j.md
queries/: software_analysis.sql
reports/development/: disentanglement_upgrade_audit.md
scripts/: run_programmatic_pipeline.py
tests/: test_discord_disentanglement.py  test_pipeline_scoring.py
