[project]
name = "discord-unveiled-software-filter"
version = "0.1.0"
description = "Pipeline para filtrar servidores de software no Discord-Unveiled e exportar dados para Parquet/DuckDB"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.1",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "rich>=14.3.3",
    "typer>=0.24.1",
    "zstandard>=0.25.0",
]

[project.scripts]
discord-unveiled = "main:run"
